# spack-exercise

./: CMakeLists.txt  README.md  main.cpp
mandatory/: package.py
optional/: package.py
